; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_index.c_alloc_index.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_index.c_alloc_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32, i32, i8*, i8*, i32, i32, i32 }

@g_str_hash = common dso_local global i32 0, align 4
@g_str_equal = common dso_local global i32 0, align 4
@g_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.index_state*)* @alloc_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alloc_index(%struct.index_state* %0) #0 {
  %2 = alloca %struct.index_state*, align 8
  store %struct.index_state* %0, %struct.index_state** %2, align 8
  %3 = load %struct.index_state*, %struct.index_state** %2, align 8
  %4 = getelementptr inbounds %struct.index_state, %struct.index_state* %3, i32 0, i32 6
  %5 = load i32, i32* %4, align 8
  %6 = call i32 @alloc_nr(i32 %5)
  %7 = load %struct.index_state*, %struct.index_state** %2, align 8
  %8 = getelementptr inbounds %struct.index_state, %struct.index_state* %7, i32 0, i32 4
  store i32 %6, i32* %8, align 8
  %9 = load %struct.index_state*, %struct.index_state** %2, align 8
  %10 = getelementptr inbounds %struct.index_state, %struct.index_state* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @calloc(i32 %11, i32 8)
  %13 = load %struct.index_state*, %struct.index_state** %2, align 8
  %14 = getelementptr inbounds %struct.index_state, %struct.index_state* %13, i32 0, i32 5
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @g_str_hash, align 4
  %16 = load i32, i32* @g_str_equal, align 4
  %17 = load i32, i32* @g_free, align 4
  %18 = call i8* @g_hash_table_new_full(i32 %15, i32 %16, i32 %17, i32* null)
  %19 = load %struct.index_state*, %struct.index_state** %2, align 8
  %20 = getelementptr inbounds %struct.index_state, %struct.index_state* %19, i32 0, i32 3
  store i8* %18, i8** %20, align 8
  %21 = load %struct.index_state*, %struct.index_state** %2, align 8
  %22 = getelementptr inbounds %struct.index_state, %struct.index_state* %21, i32 0, i32 0
  store i32 1, i32* %22, align 8
  %23 = load %struct.index_state*, %struct.index_state** %2, align 8
  %24 = getelementptr inbounds %struct.index_state, %struct.index_state* %23, i32 0, i32 1
  store i32 1, i32* %24, align 4
  ret void
}

declare dso_local i32 @alloc_nr(i32) #1

declare dso_local i32 @calloc(i32, i32) #1

declare dso_local i8* @g_hash_table_new_full(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
